# DeepVuln

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.lite  config.example.toml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: PROJECT.md  settings.local.json
.claude/commands/: commit.md  goal.md
.claude/skills/: api-governor.md  python-environment.md
config/: default.yaml  threat_intel.yaml
docs/: CURRENT_GOAL.md  ROADMAP.md  docker.md
docs/git/: history.md
docs/git/logs/: 2026-02-16-0023-bb7641c.md  2026-02-16-1700-95e316b.md  2026-02-16-1800-bc12d26.md  2026-02-16-2110-f82cb4c.md  2026-02-16-2325-d253b33.md  2026-02-16-ef7c2fa.md  2026-02-17-1430-00bd232.md  2026-02-17-1930-2985add.md  2026-02-17-2110-6712e07.md  2026-02-18-0135-6a4a8a5.md  2026-02-18-0135-f832ca1.md  2026-02-18-0455-11e0194.md  2026-02-18-1430-9a69205.md  2026-02-19-1600-7f6fbb6.md  2026-02-19-2019-6839a6c.md  2026-02-20-0205-9e01851.md  2026-02-20-0330-69eed1c.md  2026-02-20-0400-b93e56b.md  2026-02-20-1430-c7a36ad.md  2026-02-21-0615-698b1ec.md  2026-02-21-2122-4ba1b90.md  2026-02-21-2300-b2fe941.md  2026-02-27-2140-26be3ae.md  2026-03-01-1130-5de94c3.md  2026-03-01-1535-5acd173.md  2026-03-02-0925-4977497.md  2026-03-02-1215-0f47b8d.md  2026-03-02-1240-2ff1474.md  2026-03-02-2110-8f78799.md  2026-03-03-0530-6341810.md  2026-03-03-1030-93003f7.md  2026-03-03-1200-e713c59.md  2026-03-03-1909-18135e8.md  2026-03-03-1909-873a998.md  2026-03-03-2014-2a0ebd4.md  2026-03-03-2014-fbdc8df.md  2026-03-04-2015-665d1e3.md  2026-03-04-2230-e86b096.md  2026-03-04-2300-725d493.md  2026-03-04-2330-aa76692.md  (+20 more)
rules/codeql/: config.yaml
rules/codeql/go/: CustomSecurity.ql
rules/codeql/java/: CustomSecurity.ql
rules/codeql/javascript/: CustomSecurity.ql
rules/codeql/python/: CustomSecurity.ql
rules/semgrep/: config.yaml
rules/semgrep/go/: sql-injection.yaml
rules/semgrep/java/: sql-injection.yaml  xss.yaml
rules/semgrep/python/: command-injection.yaml  sql-injection.yaml
scripts/: full_scan_juice_shop.py  test_agent.py  verify_scan.py
src/: __init__.py
src/cli/: __init__.py  config_display.py  display.py  intel.py  intel_display.py  main.py  prompts.py  scan_display.py
src/core/: __init__.py  codeql_health.py  file_filtering.py  final_score.py  finding_budget.py  rule_ast_validator.py  rule_gating.py
src/layers/: __init__.py
src/models/: __init__.py  fetcher.py  workspace.py
tests/: conftest.py
tests/integration/: __init__.py  test_threat_intel_integration.py
(+255 files in other folders)
